MAR-269 add maximumPriceInCategory in getNoticesByCategory endpoint (#16)
