# controllers/notices.js
@@ -41,6 +41,10 @@ const getNoticesByCategory = async (req, res) => {
 
 
 
+  const maxPriceNotice = await Notice.find({}).sort({"price" : -1}).limit(1)
+
+  const maxPriceInCategory = maxPriceNotice[0].price;
+
   const result = await Notice.find(buildFilterObject(query))
   .limit(limit * 1)
   .skip(skip)
@@ -58,6 +62,7 @@ const getNoticesByCategory = async (req, res) => {
       totalPages,
       page: Number(page),
       limit: Number(limit),
+      maxPriceInCategory,
       result,
   });
 };
