# swagger.json
@@ -453,7 +453,11 @@
                   "type": "integer",
                   "example": 6
                 },
-                "notices": {
+                "maxPriceInCategory": {
+                  "type": "integer",
+                  "example": 84450
+                },
+                "result": {
                   "type": "array",
                   "items": {
                     "$ref": "#/components/schemas/AddNoticeResponse"
